--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,14 @@ edition = "2018"
 
 [lib]
 name = "deepnano2"
-crate-type = ["cdylib"]
+crate-type = ["staticlib"]
 
 [build-dependencies]
 os_info = { version = "2.0.0", default-features = false }
 reqwest = { version = "0.10", features = ["blocking"] }
 bzip2 = { version = "0.4" }
 tar = "0.4"
+cbindgen = { version = "0.14.4"}
 
 [dependencies]
 ndarray = { version = "0.13.1", features = ["blas"] }
@@ -23,6 +24,7 @@ kth = "0.1.0"
 pyo3 = { version = "0.8.5", features = ["extension-module"] }
 fastapprox = {version = "0.3.0"}
 numpy = "0.7.0"
+statistical = "1.0.0"
 
 [profile.release]
 lto=true
